# tiny-vector-store

./: .gitignore  README.md  pyproject.toml  requirements.txt  sample_usage.py
tinyvectorstore/: tinyvstore.py
